apps/dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: dashboard
  name: dashboard
