apps/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-kong-proxy
  namespace: dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/frontend-entry-points: http
    cert-manager.io/cluster-issuer: "letsencrypt"

spec:
  tls:
    - hosts:
        - kube-dashboard.kislan.sk
      secretName: kube-dashboard-kislan-sk
  rules:
    - host: kube-dashboard.kislan.sk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
